# text-searcher-rust

./: .gitignore  Cargo.toml  README.md
src/: finder_service.rs  lib.rs  main-cli.rs  main.rs  persistence.rs
src/searcher/: mod.rs  test_text_2.txt  text.rs
