[package]
name = "text-searcher-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circle_buffer = "0.1.3"
clap = { version = "3.1.6", features = ["derive"] }
threadpool = "1.8.1"
walkdir = "2.3.2"
csv = "1.1"
serde = "1.0.136"