[package]
name = "text-searcher-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circle_buffer = "0.1.3"
clap = { version = "3.1.6", features = ["derive"] }
threadpool = "1.8.1"
walkdir = "2.3.2"
csv = "1.1"
serde = "1.0.136"
serde_json = "1.0.81"
log = "0.4.0"
env_logger = "0.9.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]